syntax = "proto3";

package wallet;

service Wallet {
    rpc Recharge (RechargeReq) returns (RechargeResp) {}
    rpc GetUserBalance (GetUserBalanceReq) returns (GetUserBalanceResp) {}
}

message RechargeReq {
    uint32 user_id = 1;
    uint64 count = 2;
}

message RechargeResp {
    uint64 balance = 1;
}

message GetUserBalanceReq {
    uint32 user_id = 1;
}

message GetUserBalanceResp {
    uint64 balance = 1;
}